tests/compError/wrongReturnType.ucl
// testSkip
// compError
// error: expected type builtin:String but got type builtin:Number
// tests/compError/wrongReturnType.ucl:5 -> function defined here

test = fn(): String {
	1
}